# magnowire

./: README.md  pyproject.toml
examples/: 01_single_wire_Co.ipynb
magnowire/: __init__.py  _backend.py  analysis.py  cg.py  constants.py  demag.py  geometry.py  hysteresis.py  materials.py  solver.py
magnowire/tests/: __init__.py  test_demag.py
